chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -292,3 +292,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,python,windows,intellij,visualstudiocode
+
+/data/**/*kialo*
